IVYPORTAL-16987: refactor code to improve performance